--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <img src="./careers.png" alt="리플로우 채용공고" />
+    <img src="careers.png" alt="리플로우 채용공고" />
 </body>
 </html>
