--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>REFLOW 채용공고</title>
     <style>
         img {
-            margin: auto 0;
+            margin: 0 auto;
+            width: 100%;
+            max-width: 1200px;
+            display: block;
         }
 
     </style>
