fixed image not displaying

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <img src="careers.png" alt="리플로우 채용공고" />
+    <img src="reflow_careers.png" alt="리플로우 채용공고" />
 </body>
 </html>
