added second image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
-    <img src="reflow_careers.png" alt="리플로우 채용공고" />
+    <img src="reflow_careers.png" alt="리플로우 바리스타" />
+    <img src="reflow_careers2.png" alt="리플로우 브런치세프" />
 </body>
 </html>
