--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <img src="reflow_careers.png" alt="리플로우 바리스타" />
-    <img src="reflow_careers2.png" alt="리플로우 브런치세프" />
+    <img src="reflow_career2.png" alt="리플로우 브런치세프" />
 </body>
 </html>
