updating career images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <img src="reflow_careers.png" alt="리플로우 바리스타" />
-    <img src="reflow_career2.png" alt="리플로우 브런치세프" />
+    <img src="reflow_career3.jpg" alt="리플로우 바리스타" />
+    <img src="reflow_career4.jpg" alt="리플로우 브런치세프" />
 </body>
 </html>
